准备解决 IN_PROGRESS 被认领的 instance 崩溃后, IN_PROGRESS 变得无人认领的 bug